--- a/package.json
+++ b/package.json
@@ -15,9 +15,30 @@
     "@angular/compiler": "^14.0.0",
     "@angular/core": "^14.0.0",
     "@angular/forms": "^14.0.0",
+    "@angular/localize": "^14.0.0",
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@progress/kendo-angular-buttons": "^8.0.0",
+    "@progress/kendo-angular-common": "^3.0.0",
+    "@progress/kendo-angular-dateinputs": "^7.0.0",
+    "@progress/kendo-angular-dialog": "^7.0.0",
+    "@progress/kendo-angular-dropdowns": "^7.0.0",
+    "@progress/kendo-angular-excel-export": "^5.0.0",
+    "@progress/kendo-angular-grid": "^7.3.2",
+    "@progress/kendo-angular-inputs": "9 - 10",
+    "@progress/kendo-angular-intl": "^4.0.0",
+    "@progress/kendo-angular-l10n": "^4.0.0",
+    "@progress/kendo-angular-label": "^4.0.0",
+    "@progress/kendo-angular-pdf-export": "^4.0.0",
+    "@progress/kendo-angular-popup": "^5.0.0",
+    "@progress/kendo-angular-treeview": "^7.0.0",
+    "@progress/kendo-data-query": "^1.0.0",
+    "@progress/kendo-drawing": "^1.0.0",
+    "@progress/kendo-licensing": "^1.1.1",
+    "@progress/kendo-theme-default": "^5.0.0",
+    "angular-in-memory-web-api": "^0.14.0",
+    "ng2-search-filter": "^0.5.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
