--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@progress/kendo-theme-default": "^5.0.0",
     "angular-in-memory-web-api": "^0.14.0",
     "ng2-search-filter": "^0.5.1",
+    "ngx-pagination": "^6.0.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
